functional components are added

--- a/src/components/AddPerson/style.module.sass
+++ b/src/components/AddPerson/style.module.sass
@@ -6,13 +6,19 @@
     padding: 0 257px
     gap: 8px 42px
 
-    input, button
+    input, button, Select
         margin-top: 52px
         width: 400px
         height: 80px
         background-color: #D9D9D9
         border-radius: 20px
-        
+        color: #919191
+        line-height: 36px
+        font-size: 30px
+        font-style: normal
+        font-weight: 400
+        padding: 10px
+    
 
 .button 
     width: 400px
@@ -20,5 +26,10 @@
     background-color: #16A085 !important
     cursor: pointer
     border-radius: 20px
-    color: white
-    border-style: none    
+    color: white !important
+    border-style: none
+    font-size: 30px
+    line-height: 36px
+
+
+
