some styles and func were corrected

--- a/src/components/AddPerson/style.module.sass
+++ b/src/components/AddPerson/style.module.sass
@@ -1,5 +1,6 @@
 .container
     margin-top: 75px
+    margin-bottom: 35px
     height: 270px
     display: grid
     grid-template: repeat(2, 100px) / repeat(2, 400px)
