delete func and ui close component were added

--- a/src/components/GenderContainer/style.module.sass
+++ b/src/components/GenderContainer/style.module.sass
@@ -1,6 +1,9 @@
 .wrapper
     margin-top: 35px
     margin-bottom: 35px
+    position: relative
+    &:hover .close
+        display: block
 
 .title
     padding: 30px 33px
@@ -8,9 +11,15 @@
     font-weight: 400
     font-size: 30px
     line-height: 36px
-    
+
 .container
     padding-left: 33px
     display: grid
     grid-template-columns: repeat(4, 1fr)
     padding-bottom: 38px
+
+.close
+    position: absolute
+    left: 99%
+    bottom: 96%
+    display: none
